kuber/gitlab-webservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-webservice
  namespace: gitlab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitlab-webservice
  template:
    metadata:
      labels:
        app: gitlab-webservice
    spec:
      containers:
      - name: webservice
        image: gitlab/gitlab-ce:latest
        ports:
        - containerPort: 80
