kuber/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-controller-manager
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      labels:
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --enable-leader-election
        - --metrics-addr=:8080
        - --zap-log-level=info
        - --disable-webhooks
        command:
        - /manager
        image: registry.gitlab.com/gitlab-org/cloud-native/gitlab-operator:0.1.0
        name: manager
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
      terminationGracePeriodSeconds: 10
