kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-postgresql
  namespace: gitlab
spec:
  ports:
  - port: 5432
  selector:
    app: gitlab-postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis
  namespace: gitlab
spec:
  ports:
  - port: 6379
  selector:
    app: gitlab-redis
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-webservice
  namespace: gitlab
spec:
  type: NodePort  # Изменено с ClusterIP
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080  # Опционально: фиксированный порт (диапазон 30000-32768)
  selector:
    app: gitlab-webservice
